--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: map, local: true) do |form| %>
+<%= form_for(map) do |f| %>
   <% if map.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(map.errors.count, "error") %> prohibited this map from being saved:</h2>
@@ -12,21 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address, id: :map_address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :latitude %>
-    <%= form.text_field :latitude, id: :map_latitude %>
-  </div>
-
-  <div class="field">
-    <%= form.label :longitude %>
-    <%= form.text_field :longitude, id: :map_longitude %>
+    <%= f.label :address %>
+    <%= f.text_field :address %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit %>
   </div>
 <% end %>
